--- a/Room_App/app/src/main/res/values/strings.xml
+++ b/Room_App/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidExample00</string>
+    <string name="app_name">Room App</string>
     <string name="username">Username</string>
     <string name="confirm">Confirm</string>
 </resources>
